terraform/plan/lambda-best-practices/check-url-auth-type/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-url-auth-type.yaml --payload ./good-test/good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-url-auth-type
                rules:
                - rule:
                    name: check-url-auth-type
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-url-auth-type.yaml --payload ./bad-test/bad-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-url-auth-type
                rules:
                - rule:
                    name: check-url-auth-type
                  error: ~
                  violations:
                  - message: Set the authoriation type of the aws lambda function url is set to `AWS_IAM` (CHECK=spec.rules[0].assert.all[0])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
